# state2action-rt

./: .gitignore  AGENTS.md  PROJECT_STATE.md  README.md  pyproject.toml
src/state2action_rt/: __init__.py  dataset_core.py  elixir_features.py  events.py  frame_source.py  grid.py  hand_cards.py  hand_features.py  label_events_utils.py  roi.py
src/state2action_rt/hand/: __init__.py  hand_reader.py
src/state2action_rt/learning/: __init__.py  dataset.py  model.py
templates/hand_cards/: README.md
templates/hand_cards_bak/: README.md
tests/: conftest.py  test_augment_noop.py  test_build_dataset_cli.py  test_dataset_core.py  test_elixir_features.py  test_frame_source.py  test_grid.py  test_hand_cards.py  test_hand_features.py  test_inspect_hand_cli.py  test_label_events_utils.py  test_learning_dataset.py  test_model_forward.py  test_predict_policy.py  test_roi.py  test_train_policy.py
tools/: augment_noop.py  build_dataset.py  inspect_elixir.py  inspect_hand.py  inspect_sample.py  label_events.py  make_hand_templates.py  predict_policy.py  train_policy.py
